# OpenAI-Realtime-API

./: .gitignore  LICENSE  client.py  conversation.py  defaults.py  interface.py  pyproject.toml  readme.md  shared.py
openai_realtime_api/: __init__.py  client.py  conversation.py  defaults.py  shared.py  speech_player.py
tests/: .gitignore  my_pyaudio.py  simple.py
