[project]
name = "openai-realtime-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyaudio==0.2.14",
    "python-dotenv>=1.0.1",
    "websockets==13.0",
]

[tool.uv.sources]
openai-realtime-api = { workspace = true }

